Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@ please visit <a href="http://creativecommons.org/licenses/by-sa/3.0/deed.de">htt
 </tbody>
 </table>
 
+<h2>
+<a id="more-info" class="anchor" href="#more-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>More Info</h2>
+
+<p>There are some more infos about this script at the Evernote Forum: <a href="https://discussion.evernote.com/topic/31155-export-places-to-kml/">https://discussion.evernote.com/topic/31155-export-places-to-kml/</a></p>
+
+<h2>
+<a id="legal-mumbo-jumbo" class="anchor" href="#legal-mumbo-jumbo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Legal Mumbo Jumbo</h2>
+
 <p>Google Earth and Evernote are Trademarks of their respective owners.</p>
 
 <p>This script is shared without any support or warranty.
